[package]
name = "rcmerkle"
version = "0.1.1"
authors = ["Sun <huachuang20@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Efficient Merkle tree calculation function and state machine."
repository = "https://github.com/rust-cc/rcmerkle"
keywords = ["merkle", "tree"]
license = "MIT/Apache-2.0"

[dependencies]
sha2 = "0.8"
sha3 = "0.8"
